--- a/PHASE 1- FOUNDATION/DAY-1 /README
+++ b/PHASE 1- FOUNDATION/DAY-1 /README
@@ -1,4 +1,4 @@
-##Databricks 14 Days AI Challenge 🚀
+##Databricks 14 Days AI Challenge 🚀##
 #Day 1 – Platform Setup & First Steps (09/01/26)
 
 This repository documents Day 1 of my Databricks 14 Days AI Challenge, focused on setting up the Databricks platform and understanding its core concepts.
